[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Opponent.gd" type="Script" id=1]
[ext_resource path="res://scenes/Deck.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Hand.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Arena.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/textures/wood-clean-seamless-handcrafted.jpg" type="Texture" id=5]
[ext_resource path="res://shaders/BorderRadius.shader" type="Shader" id=6]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 6 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/radius = 0.1
shader_param/size = Vector2( 945, 380 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 2048, 2048 )

[node name="Opponent" type="Node"]
script = ExtResource( 1 )

[node name="OpponentArena" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.604
margin_top = -188.787
margin_right = -350.604
margin_bottom = -188.787

[node name="Panel" type="Panel" parent="."]
material = SubResource( 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -472.5
margin_top = 50.0
margin_right = 472.5
margin_bottom = 430.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -150.0
margin_bottom = 150.0
mouse_filter = 2
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_left = 47.0
margin_right = 207.0
margin_bottom = 300.0

[node name="OpponentDeck" parent="Panel/HBoxContainer/VBoxContainer" instance=ExtResource( 2 )]

[node name="OpponentHand" parent="Panel/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 237.0
margin_right = 897.0
margin_bottom = 300.0

[connection signal="card_played" from="OpponentArena" to="." method="_on_OpponentArena_card_played"]
